# backend/src/routes/promotionApplication.routes.js
@@ -1,0 +1,10 @@
+const express = require('express');
+const requireAuth = require('../middlewares/requireAuth');
+const promotionApplicationController = require('../controllers/promotionApplication.controller');
+
+const router = express.Router();
+
+router.post('/', requireAuth, promotionApplicationController.add);
+router.delete('/:promotionOfferId', requireAuth, promotionApplicationController.remove);
+
+module.exports = router;
